(docs): added documentation for the math and parser packages. (fix): fixed ODEPlots not be saved or opened properly. (docs): Added a How-To-Use file for users.